[package]
name = "ed448-verifier"
description = "A naive implementation of Ed448 verifier"
authors = ["Kikuo Emoto <kemoto@codemonger.io>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["ed448"]
homepage = "https://github.com/codemonger-io/ed448-verifier"
repository = "https://github.com/codemonger-io/ed448-verifier"

[features]
default = ["sha3"]
digest = ["signature/digest"]
sha3 = ["dep:sha3"]

[dependencies]
digest = "0.10"
ed448-goldilocks = "0.9"
# ed448-signature depends on signature v2.3 which is not released yet.
# and signature v2.3 depends on digest v0.11 which is neither released
# and has a different package structure from v0.10.
# ed448-signature = { git = "https://github.com/RustCrypto/signatures.git" }
sha3 = { version = "0.10", optional = true }
signature = "2.2"

[dev-dependencies]
hex-literal = "0.4"
